[gd_scene load_steps=8 format=2]

[ext_resource path="res://Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/house-in-a-forest-loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/game-over.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 560, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 10.0
margin_bottom = 10.0
color = Color( 0.25098, 0.258824, 0.490196, 1 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -846, -267 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 280, 400 )
__meta__ = {
"_gizmo_extents_": 22.4
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 1.0
autoplay = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 1.0
autoplay = true

[connection signal="timeout" from="MobTimer" to="." method="_on_Timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
